css/style.css
.central-960 {
  min-width: 960px;
}

/* Open Sans */

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v15/mem8YaGs126MiZpBA-UFW50bbck.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}

/* Open Sans */

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v15/mem8YaGs126MiZpBA-UFVZ0b.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

/* Varela Round */

@font-face {
  font-family: 'Varela Round';
  font-style: normal;
  font-weight: 400;
  src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(https://fonts.gstatic.com/s/varelaround/v9/w8gdH283Tvk__Lua32TysjIfqcuPP9g.woff2) format('woff2');
  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
}

/* Varela Round */

@font-face {
  font-family: 'Varela Round';
  font-style: normal;
  font-weight: 400;
  src: local('Varela Round Regular'), local('VarelaRound-Regular'), url(https://fonts.gstatic.com/s/varelaround/v9/w8gdH283Tvk__Lua32TysjIfp8uP.woff2) format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

#east_map_2018 path {
  stroke: #D3D3D3;
}

#east_map_2013 path {
  stroke: #D3D3D3;
}

#west_map_malay path {
  stroke: #D3D3D3;
}

#west_map_party path {
  stroke: #D3D3D3;
}

.bigpic-credit {
  background: #54278f;
  color: #FFFFFF;
}

.y-axis line {
  display: none;
}

.circle-y-axis line,
.circle-y-axis path {
  display: none
}

svg {
  display: inline-block;
  margin: auto 0;
  text-align: center;
}

/* BN's seats colour */

.bn {
  fill: #092781;
}

/* PH's seats colour */

.ph {
  fill: #ED1C24;
}

/* PAS' seats colour */

.pas {
  fill: #009000;
}

/* Independent candidates' seats colour */

.ind {
  fill: #FFA500;
}

/* Solidariti's seat colour */

.solidariti {
  fill: #78D7F5;
}


/* choropleth colour scheme */

.q0-5 {
  fill: #f2f0f7;
}

.q1-5 {
  fill: #cbc9e2;
}

.q2-5 {
  fill: #9e9ac8;
}

.q3-5 {
  fill: #756bb1;
}

.q4-5 {
  fill: #54278f;
}

.bn-circle {
  fill: #9e9ac8;
  stroke: #000000;
  stroke-width: 1;
}

.bn-win-circle {
  fill: #092781;
  stroke: #000000;
  stroke-width: 1;
}

.ph-win-circle {
  fill: #ED1C24;
  stroke: #000000;
  stroke-width: 1;
}

.pas-win-circle {
  fill: #009000;
  stroke: #000000;
  stroke-width: 1 ;
}

.grid line {
  stroke: #D3D3D3;
  stroke-opacity: 0.7;
  shape-rendering: crispEdges;
}

.grid path {
  stroke-width: 0;
}

.state {
  font-family: 'Varela Round', sans-serif;
}

.constituency {
  font-family: 'Varela Round', sans-serif;
  font-size: 1.2em;
  font-weight: 900;
}

.winner {
  font-family: 'Open Sans', sans-serif;
  font-weight: 900;
}

.majority {
  font-family: 'Open Sans', sans-serif;
  font-style: italic;
}

.credit, .losers {
  font-family: 'Open Sans', sans-sans-serif;
}

.active {
  fill: #FFFF00;
}

.chart-wrapper {
  display: none;
  position: fixed;
  bottom: 20px;
  left: 50%;
  margin-left: -240px;
  /* z-index: 0; */
}

@media screen and (max-width: 500px) {
  .testing {
    background: #FFFF00;
    margin: 0 auto;
    margin-bottom: 800px;
    z-index: 1;
  }
  .constChart-text-wrapper {
    margin: 0 auto;
    padding-bottom: 800px !important;
    /* z-index: -1; */
  }
  .map-wrapper {
    margin: 0 auto;
    padding-bottom: 1000px !important;
    /* z-index: -1; */
  }
  .xAxis_label {
    font-family: 'Open Sans', sans-serif;
    font-size: 0.7em;
  }

  .yAxis_label {
    font-family: 'Open Sans', sans-serif;
    font-size: 0.7em;
  }
}

@media screen and (min-width: 501px) {
  .testing {
    background: #FFFF00;
    margin: 0 auto;
    margin-bottom: 800px;
    z-index: 1;
  }

  .constChart-text-wrapper, .map-wrapper {
    margin: 0 auto;
    padding-bottom: 600px !important;
    /* z-index: -1; */
  }
  .xAxis_label {
    font-family: 'Open Sans', sans-serif;
    font-size: 0.8em;
  }
  .yAxis_label {
    font-family: 'Open Sans', sans-serif;
    font-size: 0.8em;
  }
}

.hide-map, .hide-circle {
  display: none !important;
}

div.tooltip {
  margin: auto;
  position: absolute;
  text-align: left;
  width: 175px;
  height: 110px;
  padding: 10px;
  font: 1em 'Open Sans', sans-serif;
  background: #f2f0f7;
  border: 1px solid #000000;
  pointer-events: none;
  z-index: 2;
}

div.map-tooltip {
  margin: auto;
  position: absolute;
  text-align: left;
  width: 200px;
  height: 120px;
  padding: 10px;
  font: 1em 'Open Sans', sans-serif;
  background: #f2f0f7;
  border: 1px solid #000000;
  pointer-events: none;
  z-index: 2;
}




.legend {
  font-family: 'Open Sans', sans-serif;
}

.legend-container {
  fill: #FFFFFF;
  opacity: 0.9;
  stroke: #D3D3D3;
  stroke-width: 2;
}

#toggle {
  background: #9e9ac8;
  color: #FFFFFF;
}

#ge13-map {
  background: #9e9ac8;
  color: #f2f0f7;
}

#ge14-map {
  background: #f2f0f7;
  color: #54278f;
}

